styles.css
/* *************************** CUSTOM STYLES *************************** */

:root {
  --clr-main-black: #262626;
  --clr-shadow-gray: #888888;
}

/* *************************** BASE STYLES *************************** */

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  width: 100%;
  height: 100%;
  font-size: 62.5%;
  scroll-behavior: smooth;
}

body {
  font-family: "Montserrat", sans-serif, helvetica;
  letter-spacing: 0.1rem;
  font-size: 16px;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: #fff;
}

button {
  border: none;
}

/* *************************** END BASE STYLES *************************** */

/* *************************** NAVBAR *************************** */

header {
  background: var(--clr-main-black);
  position: fixed;
  width: 100%;
  height: 70px;
  font-size: 2rem;
  z-index: 1;
}

.navbar {
  display: flex;
  justify-content: end;
  align-items: center;
  min-height: 7rem;
}

.nav-logo {
  display: none;
  font-size: 4rem;
  margin-left: 3rem;
}

.nav-menu {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3rem;
}

button {
  margin-right: 3rem;
  font-size: 2rem;
  padding: 1rem 2rem;
  cursor: pointer;
}

.contact-btn {
  color: var(--clr-main-black);
}

.hamburger {
  display: none;
  margin-right: 3rem;
  cursor: pointer;
}

.bar {
  display: block;
  background-color: #fff;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  transition: all 300ms ease-in-out;
}

/* Navbar hover */
.nav-item :after {
  display: block;
  content: "";
  border-bottom: 2px solid #fff;
  margin-top: 0.5rem;
  transform: scaleX(0);
  transition: transform 250ms ease-in-out;
}

.nav-item :hover:after {
  transform: scaleX(1);
}

/* *************************** END NAVBAR *************************** */

/* *************************** WELCOME  *************************** */

#welcome {
  width: 100%;
  min-height: 100vh;
  display: flex;
  justify-content: center;
}

.welcome-wrap {
  color: var(--clr-main-black);
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  max-width: 1280px;
}

.about-left-wrap {
  width: 50%;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.about-left-wrap h1 {
  font-size: 4rem;
  font-weight: 600;
}

.about-left-bio {
  font-size: 2rem;
  font-weight: 400;
  line-height: 3.2rem;
}

.about-left-sub-bio {
  font-size: 1.6rem;
  font-weight: 200;
  line-height: 2.8rem;
  width: 75%;
}

.profile-pic {
  max-width: 40rem;
}

/* *************************** END WELCOME *************************** */

/* *************************** SKILLS *************************** */

#skills {
  background: var(--clr-main-black);
  width: 100%;
  min-height: 100vh;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.front-end,
.back-end,
.other,
.software,
.key-comp,
.super-skills {
  display: flex;
  flex-direction: column;
}

.skills-wrap h1 {
  font-size: 4rem;
  font-weight: 500;
  text-align: center;
  margin: 2rem;
}

.skills-wrap h2 {
  font-size: 3rem;
  font-weight: 400;
  text-align: center;
}

.skills-wrap li {
  margin: 1rem 0;
}

.skills-hard,
.skills-soft {
  display: flex;
  justify-content: center;
  gap: 5rem;
  margin: 4rem 0;
}

.skills-hard h3,
.skills-soft h3 {
  font-size: 2rem;
  font-weight: 500;
  text-align: center;
  border-bottom: 1px solid #fff;
  margin-bottom: 1rem;
}

/* *************************** END SKILLS *************************** */

/* *************************** PROJECTS *************************** */

#projects {
  width: 100%;
  min-height: 100vh;
}

.projects-wrap {
  padding: 10rem;
  max-width: 1280px;
  margin: 0 auto;
}

.projects-wrap h1 {
  font-size: 4rem;
  font-weight: 500;
  text-align: center;
  margin: 2rem;
}

.projects-wrap h2 {
  font-size: 1.4rem;
  font-weight: 400;
  text-align: center;
  margin: 2rem;
  font-style: italic;
}

.project-title {
  background: var(--clr-main-black);
  font-size: 2rem;
  font-weight: 400;
  text-align: center;
  padding: 1rem;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
  grid-gap: 4rem;
  width: 100%;
}

.image {
  overflow: hidden;
}

.image img {
  width: 100%;
  display: block;
}

.image .zoom-in img {
  transform: scale(1);
  transition: 250ms ease-in-out;
}

.image .zoom-in:hover img {
  transform: scale(1.5);
  opacity: 0.7;
}

/* *************************** END PROJECTS *************************** */

/* *************************** EDUCATION *************************** */

#education {
  background: var(--clr-main-black);
  color: white;
  width: 100%;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.education-wrap h1 {
  font-size: 4rem;
  font-weight: 500;
  text-align: center;
  gap: 3rem;
}

.school {
  margin: 2rem 0;
}

.school h2 {
  font-size: 2rem;
  font-weight: 500;
  margin: 1rem 0;
  border-bottom: 1px solid #fff;
}

.school li {
  margin: 1rem;
}

.school p {
  margin: 0.5rem 0;
}

.csus {
  font-style: italic;
}

/* *************************** END EDUCATION *************************** */

/* *************************** CERTS *************************** */

#certs {
  color: var(--clr-main-black);
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.certs-wrap h1 {
  font-size: 4rem;
  font-weight: 500;
  text-align: center;
  margin: 2rem;
}

.certs li {
  margin: 2rem;
}

.certs-bold {
  font-weight: 500;
}

/* *************************** END CERTS *************************** */

/* *************************** CONTACT *************************** */

#contact {
  background: var(--clr-main-black);
  color: white;
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.contact-wrap h1 {
  font-size: 4rem;
  font-weight: 500;
  text-align: center;
}
/* ... */

